--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ span{
 }
 .container .nav{
   width: 100%;
-  margin: 10px 0px;
+  margin: 10px 0px 25px 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -54,6 +54,7 @@ span{
  text-decoration: none;
  color: black;
  font-weight: 600;
+ transition: transform .5s;
 }
 .container .nav .list-item ul li a:hover{
  
@@ -61,6 +62,7 @@ span{
     color: white;
     background-color: black;
     border-radius: 9px;
+    transform: translateY(-10px);
 }
 .container .content .left{
     width: 50%;
@@ -119,6 +121,7 @@ color: #ff234b;
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.1 );
     text-align: center;
+    transition: transform .5s;
 }
 .content .right img{
     position: relative;
@@ -139,8 +142,16 @@ color: #ff234b;
     left: -50px;
     bottom: -15px;
 }
-.box-2,.box-4{
+.box-2{
     position: relative;
-   top: -70px;
+    top: -40px;
+    left: -50px;
+}
+.box-4{
+    position: relative;
+   top: -40px;
    left: -50px;
+}
+.box-1:hover,.box-2:hover,.box-3:hover,.box-4:hover{
+  transform: translateY(-10px);
 }
