--- a/style.css
+++ b/style.css
@@ -172,7 +172,25 @@ color: #ff234b;
   transform: translateY(-10px);
 
 }
+@media screen and (max-width: 1300px){
+    .more{
+        position: relative;
+        left: -500px;
+        top: -100px;
+    } 
+}
 @media screen and (max-width: 768px){
+    .container{
+        width: 90vw;
+    }
+    .nav .logo h1{
+        font-size: 1.6rem;
+    }
+    .content-box-1,.content-box-2{
+        display: flex;
+       flex-direction: column;
+        align-items: center;
+    }
     .content{
    flex-wrap: wrap;
    flex-direction: column;
@@ -192,13 +210,13 @@ color: #ff234b;
     }
     .box-2{
         position: relative;
-        top: -40px;
-        left: -20px;
+        top: 0px;
+        left: 10px;
     }
     .box-4{
         position: relative;
-       top: -40px;
-       left: -20px;
+       top: 010px;
+       left: 20px;
     }
     .more{
         position: relative;
@@ -209,20 +227,38 @@ color: #ff234b;
         width: 100%;
     }
     .content .left .text h1{
-        font-size: 1.1rem ;
+        font-size: 1.2rem ;
+       
     }
     .content .left .text h2{
-        font-size: 1.1rem ;
+        font-size: 1rem ;
     }
     .content .right img{
-        width: 100%;
+        width: 120px;
         position: relative;
-        top: -30px;
-        left: -20px;
-      transform: scale(1.2);
+        top: -40px;
+        left: -28px;
+      transform: scale(1.3);
     }
    .content .right{
        margin: 30px 0px ;
    }
     
+}
+@media screen and (max-width: 400px){
+    .content .left .text h1{
+        font-size: 0.8rem ;
+       
+    }
+    .content .left .text h2{
+        font-size: 0.7rem ;
+    }
+    .content .left .text h5{
+        font-size: 0.6rem ;
+    }
+    .more{
+        position: relative;
+        left: 100px;
+        top: -15px;
+    }
 }
